Partially fix header on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -412,6 +412,6 @@ ul.nav {
   background-size:cover
 }
 
-/*.navbar-collapse.collapse.in {*/
-  /*background-color: white;*/
-/*}*/
+.navbar-collapse.collapse.in {
+  background-color: white;
+}
